--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ pycryptodomex==3.23.0
 python-dotenv==1.1.1
 requests==2.32.4
 urllib3==2.5.0
+validators==0.35.0
 websockets==15.0.1
 yarl==1.20.1
